# SK-ECE219-Project2

./: .gitignore  AGENTS.md  Makefile  README.md  lefthook.yml  part1.py  part2.py  part3.py  pyproject.toml
answers/: Part1_Answers.md  Part2_Answers.md  Part3_Answers.md
assignment/: FAQ.md  Part0.md  Part1.md  Part2.md  Part3.md
docs/: index.html  styles.css
outputs/: Q10_Q11_Q12_theme_clustering.json  Q10_Q11_theme_clustering.json  Q13_Q16_features.json  Q13_Q19_summary.json  Q17_tsne.json  Q18_clustering.json  Q19_mlp.json  Q1_Q2_results.json  Q1_dataset_stats.json  Q21_detailed.json  Q22_detailed.json  Q22_metrics.json  Q23_detailed.json  Q23_metrics.json  Q2_minilm.json  Q2_tfidf.json  Q3_Q4_clustering_results.json  Q3_minilm_clustering.json  Q5_pca_results.json  Q6_game_info.csv  Q6_game_vectors.json  Q6_minilm_matrix.npy  Q7_Q8_best_model.pkl  Q7_Q8_game_clustering.json  Q9_genre_estimation.json  part2_clustering.json  part2_mlp.json  part2_summary.json  part3_q21_detailed.json  part3_q22_detailed.json  part3_q22_metrics.json  part3_q23_detailed.json  part3_q23_metrics.json  part3_summary.json  task1_2_clustering_results.json  task1_2_minilm_clustering.json  task1_2_tfidf_clustering.json  task1_4_results.json  task2_2_clustering.json  task2_best_labels.npy  (+3 more)
tests/: conftest.py  test_part1.py  test_part2.py  test_part3.py
