[project]
name = "proj2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "datasets>=4.5.0",
  "jupyter>=1.1.1",
  "llvmlite>=0.44",
  "matplotlib>=3.10.8",
  "nltk>=3.9.2",
  "numba>=0.60",
  "numpy>=2.3",
  "pandas>=3.0.0",
  "scikit-learn>=1.8.0",
  "seaborn>=0.13.2",
  "sentence-transformers>=5.2.0",
  "torch>=2.10.0",
  "transformers[torch]>=4.57.6",
  "umap-learn>=0.5.11",
]

[tool.ruff]
exclude = ["helpers", "Makefile"]

[dependency-groups]
dev = ["lefthook>=2.0.15", "pytest>=9.0.2", "ruff>=0.14.14"]

[tool.pytest.ini_options]
pythonpath = ["."]
